welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = 
{
var sum =0
sum1= a+b
sum2= b+c
sum3= c+d
if (sum1=10 || sum2=10 || sum3=10) return 10;  
if (sum1=sum2+10 ||sum1=sum3+10) return 5;
return 0; 
}
